# solidsync

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/auth/: discovery.rs  dpop.rs  mod.rs  pkce.rs  session.rs  state.rs
src-tauri/src/connectors/: mod.rs  obsidian.rs
src/components/: ObsidianPanel.tsx
src/lib/: auth.ts  obsidian.ts
