[package]
name = "solidsync"
version = "0.1.0"
description = "Bridge PKM tools to your Solid Pod"
authors = ["SolidSync contributors"]
edition = "2021"

[lib]
name = "solidsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
url = "2"
percent-encoding = "2"

rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
p256 = { version = "0.13", features = ["ecdsa"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
